substrate/frame/support/test/tests/pallet_ui/genesis_invalid_generic.stderr
error: Invalid genesis builder: expected `GenesisBuild<T>` or `GenesisBuild<T, I>`
  --> tests/pallet_ui/genesis_invalid_generic.rs:36:7
   |
36 |     impl GenesisBuild for GenesisConfig {}
   |          ^^^^^^^^^^^^

error: expected `<`
  --> tests/pallet_ui/genesis_invalid_generic.rs:18:1
   |
18 | #[frame_support::pallet]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `frame_support::pallet` (in Nightly builds, run with -Z macro-backtrace for more info)
